@@ -4,6 +4,7 @@ Version 5.6.0 (TBD)
     Fixed the `visualchars` plugin causing the editor to steal focus when initialized #TINY-6282
     Fixed `fullpage` plugin altering text content in `editor.getContent()` #TINY-6541
     Fixed font size keywords such as `medium` not displaying correctly in font size menus #TINY-6291
+    Fixed an issue where some attributes in table cells were not copied over to new rows or columns #TINY-6485
     Fixed some incorrect types in the new TypeScript declaration file #TINY-6413
 Version 5.5.1 (TBD)
     Fixed pressing the down key near the end of a document incorrectly raising an exception #TINY-6471
